More Random Stuff For France

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -9,7 +9,7 @@
   FRA_Peace_With_Britain:0 "A Peace With Honour Has Been Signed With Britain"
 
   ##########################
-  # Leader And General Descriptions
+  # Leader General And Admiral Descriptions
   ##########################
 
   PB_Jacques_Doriot_Desc:0 "§YBorn:§! 26/9/1898\n\n§YJacques Doriot§! is something of an enigma in French politics. Born to a working class family in Saint Denis, near Paris. At an early age, Doriot was exposed to the revolutionary politics of wartime France. Far too young to join the military at the onset of the Great War, Doriot could only watch from the sidelines as France began to shudder and break under the strain of war. As supplies dwindled daily and the sounds of gunfire approached Paris, Doriot's family fled to Orléans, where they would remain until the end of the conflict.\n\nThe collapse of the French Empire and the imposition of a Republic would catapult the nation into a period of intense unrest. Revolutionaries, restorationists and common thugs battled in the streets over what was left of the French corpse. It was in this pressure cooker political scene that Doriot would begin his rise to power. Initially a member of the Socialist Youth League, he abandoned left wing politics after the failed September Paris Uprising in 1926. Instead, he aligned himself with the newly formed French Popular Front and Marcel Déat, and by 1928 the FPF had taken the reigns of the Republic in a coalition with the pro-monarchist Action Française. Déat died suddenly in 1929 and the subsequent power struggle ended with Doriot seizing control of the party, though at the cost of major concessions to the AF and the Left-Nationalists. Now the de-facto dictator of France, Jacques Doriot seeks revenge against the Germans and the re-establishment of France's dominance in Europe. The French population, radicalized by Long Depression and the Treaty of Tours, stand united, at least on paper, with the Grand Marshal's vision of a new imperial France.\n\n§RAcross the border lies the enemy of the French people, and it is the holy duty of the Grand Marshal to exorcise this degenerate Judeo-Germanic curse from Europe, no matter the cost!§!"
@@ -24,6 +24,14 @@
 
   PB_Gabrielle_Chanel_DESC:0 ""
 
+  PB_Jean_DESC:0 ""
+
+  PB_Charles_Nogues_DESC:0 "§YBorn:§! 13/8/1876\n\n§YCharles Noguès§! was born into wealth. He was raised in a family owned estate in north-east Morocco for much of his childhood. Every week a new shipment of eager French colonists would arrive through the Spanish city of Melilla, here Mr. Noguès saw the rapid Francization of Africa along with all the new technologies the mainland could offer. Some called it civilization, others called it imperialism. Ironically by his late teens Mr. Noguès would take the very route many followed just to arrive to the place he called home for so long, he would establish himself in Paris and join the École Polytechnique and pursue military doctrinal studies before his entry into the army.\n\nWhen the Great War broke out Mr. Noguès specialized in armoured warfare and was an early proponent of landship utilization, spearheading France's first Armoured Corp at the battle of Verdun; the results were simply to good to ignore. Even when the Treaty of Tours was signed secret efforts were being made to reverse engineer captured mechs, although the technology had be used against its creators general production knowledge was still unknown. "
+
+  PB_Claire_Chennault_DESC:0 ""
+
+  PB_Maxime_Weygand_DESC:0 ""
+
   PB_Maurice_Gamelin_Desc:0 "§YBorn:§! 20/9/1872\n\n§YMaurice Gamelin§! is France's greatest tactician. Being born in a rural town just outside of central Paris exposed Mr. Gamelin to a mixed life of odd-urban jobs and the occasional summer wheat field retreat, though times have changed. The France he once saw burn has risen once again, ready to toy with her weak prey and establish herself as Europe's greatest empire.\n\nWhen the German's came knocking on Paris' door Petain and his hastly cobbled defence force did little in preventing the fall of the French capital; Gamelin and the rest of the officer corp as a result retreated to Tours with a small contingency force being sent to Orleans. Here his skills truly shined, even though France had entered her dying hour enough time had passed for Gamelin to be promoted to lieutenant. The small operational force he operated under (which amounted to nothing greater than 4000 men) captured a vital supply line that cost the Germans and British a great deal in their campaigns, managing to hold out under continous siege till the wars end. As France enters a new age Gamelin, and many others just like him, must help France pave her way to greatest; else she shall once again fall."
 
   PB_Louis_Franchet_Desc:0 "§YBorn:§! 25/5/1856\n\n§YLouis Franchet§! has seen the world change drastically, traditions have been replaced with steel and the rules of war have altered beyond recognition. There are few that remember a time before war, even fewer that can fixate on a society that hadn't caved to machine. As the days go by Franchet becomes one of the many few that were born prior to Europe's great industrial awakening, time has slipped from his fingers and what he has left he has dedicated to building France anew. In a great tragedy he has seen man go from conquer to conquered and if one was to ask why he held such a disliking for mans greatest creations, he simply points to all the dead that roam flanders fields. For him he remains silent about his past, it matters little wether a grand story could be told of his life. If he had made one realisation, it would be tomorrow holds all the keys to mans success, or its destruction."
@@ -34,8 +42,6 @@
 
   PB_Theophile_Brebant_Desc:0 "§YBorn:§! 24/5/1889\n\n§YTheophile Brebant§! witnessed Paris fall to the German and British hordes. The two week siege left Mr. Brebant terribly shellshocked, endless barrages of earth and metal does unspeakable things to a man and Mr. Brabant wasn't spared the worst of it. He grew a certain dislike of his invaders on a level other men never reach; constructing terrifying stereotypical recreations of the British and German man. Here he would tunnel his emotions towards these imaginative barbarians, it is therefore no surprise that when the SP promoted these very constructions Mr. Brabant quickly fell under their banner.\n\nWhile his outspoken support for the SP could one day cost him his head there are other issues Mr. Brabant must attend to, namely a faulty liver that he must repeatedly seek medical support for. Everyday his medical condition is worsened and his operational capacity is weakened, it seems France's greatest decade may be an unfinished paragraph in Mr. Brabant's story."
 
-  PB_Claire_Chennault_Desc:0 ""
-
   PB_Charles_Huntziger_Desc:0 ""
 
   PB_Henri_Giraud_Desc:0 ""
@@ -43,8 +49,6 @@
   PB_Alphonse_Georges_Desc:0 ""
 
   PB_Paul_Legentilhomme_Desc:0 ""
-
-  PB_Maxime_Weygand_Desc:0 ""
 
   PB_Jean_Tassigny_Desc:0 ""
 
@@ -498,7 +502,7 @@
   French.68.a:0 "They Will Learn To Love Us"
 
   French.69.t:0 "Greater France"
-  French.69.d:0 ""
+  French.69.d:0 "So, it was settled. Europe’s longest rivalry came to an ever so bittersweet end. Though the fields laid torn and permanently scarred, not too different from those long ago, victory along with all its burden was finally achieved. While some individuals are enslaved, others subjected, there are also those that have been liberated. While one may ponder on the lasting effects such a war may have, for the time being many can rest knowing mans destruction is of a future concern; that is unless old squabbles refuse to die. It is far too soon to make out whether Paris will rule the next century in a period of gold, even sooner to tell if humanity can reject its primitive ways. War, borders, and insignificant differences can make everything we’ve ever worked towards ultimately pointless. Yet it is these very issues that we as a society strive to overcome, otherwise are we truly human? While the era of British peace has finally come to an end, a new era has been birthed. Peaceful or not continental Europe will enjoy a new master, one not confined to the British ways of thought. "
   French.69.a:0 "Revenge Has Never Tasted Better"
 
   French.70.t:0 "The Pacte Revanchiste"
@@ -1126,6 +1130,8 @@
   PB_FRA_German_Industry:0 "Migrate Rhenish Industries"
   PB_FRA_Chattel_Slavery:0 "German Servitude"
   PB_FRA_Heavy_Water_Research:0 "Heavy Water Development"
+  PB_FRA_Fund_The_Steelworks:0 "Fund The Steelworks"
+  PB_FRA_Fund_The_Steelworks_desc:0 ""
   PB_FRA_Rhineland_Integration:0 "Integration of the Rhineland"
   PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
   PB_FRA_Rearmament_Campaigns:0 "Rearmament Campaigns"
@@ -1368,8 +1374,8 @@
   # FRENCH DECISIONS
   ##########################
    
-  PB_FRA_Fund_The_Steelworks:0 "Heavy Industry Planning"
-  PB_FRA_Fund_The_Steelworks_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
+  PB_FRA_Fund_The_Steelworks_Cat:0 "Heavy Industry Planning"
+  PB_FRA_Fund_The_Steelworks_Cat_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
   PB_Heavy_Industry_In_Languedoc:0 "Heavy Industry In Languedoc"
   PB_Dig_Sites_In_Languedoc:0 "Dig Sites In Languedoc"
   PB_Heavy_Industry_In_Calais:0 "Heavy Industry In Calais"
