More French Stuff

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -1584,6 +1584,9 @@
   FRA_Mobolize_The_Militias_tt:0 "Fifteen §YTempête Populaire§! Divisions Will Be Mobolized Across France"
   PB_FRA_Foreign_Forces_tt:0 "Three §YTempête Populaire§! Divisions Will Be Mobolized Across France"
 
+  PB_FRA_Nationalistic_Fervour_Clamp_tt:0 "The Minimum Value For Nationalistic Fervour Will be §PRaised§!"
+  PB_FRA_Factionalism_Clamp_tt:0 "The Maximum Value For Factionalism Will be §PLowered§!"
+
   ##########################
   # FRENCH COLLABORATION IN GERMANY
   ##########################
