French loc and Mega city stuff

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -12,6 +12,8 @@
   # Leader General And Admiral Descriptions
   ##########################
 
+  # Leaders
+
   PB_Jacques_Doriot_Desc:0 "§YBorn:§! 26/9/1898\n\n§YJacques Doriot§! is something of an enigma in French politics. Born to a working class family in Saint Denis, near Paris. At an early age, Doriot was exposed to the revolutionary politics of wartime France. Far too young to join the military at the onset of the Great War, Doriot could only watch from the sidelines as France began to shudder and break under the strain of war. As supplies dwindled daily and the sounds of gunfire approached Paris, Doriot's family fled to Orléans, where they would remain until the end of the conflict.\n\nThe collapse of the French Empire and the imposition of a Republic would catapult the nation into a period of intense unrest. Revolutionaries, restorationists and common thugs battled in the streets over what was left of the French corpse. It was in this pressure cooker political scene that Doriot would begin his rise to power. Initially a member of the Socialist Youth League, he abandoned left wing politics after the failed September Paris Uprising in 1926. Instead, he aligned himself with the newly formed French Popular Front and Marcel Déat, and by 1928 the FPF had taken the reigns of the Republic in a coalition with the pro-monarchist Action Française. Déat died suddenly in 1929 and the subsequent power struggle ended with Doriot seizing control of the party, though at the cost of major concessions to the AF and the Left-Nationalists. Now the de-facto dictator of France, Jacques Doriot seeks revenge against the Germans and the re-establishment of France's dominance in Europe. The French population, radicalized by Long Depression and the Treaty of Tours, stand united, at least on paper, with the Grand Marshal's vision of a new imperial France.\n\n§RAcross the border lies the enemy of the French people, and it is the holy duty of the Grand Marshal to exorcise this degenerate Judeo-Germanic curse from Europe, no matter the cost!§!"
 
   PB_Charles_Muarras_Desc:0 "§YBorn:§! 20/4/1868\n\n§YCharles Maurras§! is considered by some as France's most loyal patriot, and by others as a crooked old fool that believes in bygone traditions. Whatever the case may be one thing for sure is Maurras and his cronies remain adamant on the return of the Bourbon dynasty, which has remained in exile in Corsica since the Great War. Before the Great War Maurras was a self-employed author mainly writing non-fiction books on political science, taking inspiration from various pre-20th century philosophies, namely Existentialism and Phenomenology.\n\nMaurras lived a rather poor life finding only minor success in a few written texts but by the end of the Great War this difficulty only became worse. Food stalls became a permanent fixture of Maurras' life until a small pro-monarchist printing agency hired him. From there Maurras rose through the ranks and established himself as a fairly notable writer, ultimately becoming head of the New Kings League newspaper company.\n\nBy 1927 the political landscape of France was by all definitions an utter shit show. Strikes and protests occurred almost daily and from this point on Maurras started to present himself as the man with all the solutions, gathering public support and finding a 'comfortable' position in the newly founded Front Populaire Français. Today Charles Maurras stands victorious in the triumvirate and though stability is finally restored, to some degree, reconstruction and preperation for Europe's 'darkest years' is required if France is to outlive the storm.\n\n§RAll heil Maurras!§!"
@@ -26,9 +28,11 @@
 
   PB_Jean_DESC:0 ""
 
+  # Generals
+
   PB_Charles_Nogues_DESC:0 "§YBorn:§! 13/8/1876\n\n§YCharles Noguès§! was born into wealth. He was raised in a family owned estate in north-east Morocco for much of his childhood. Every week a new shipment of eager French colonists would arrive through the Spanish city of Melilla, here Mr. Noguès saw the rapid Francization of Africa along with all the new technologies the mainland could offer. Some called it civilization, others called it imperialism. Ironically by his late teens Mr. Noguès would take the very route many followed just to arrive to the place he called home for so long, he would establish himself in Paris and join the École Polytechnique and pursue military doctrinal studies before his entry into the army.\n\nWhen the Great War broke out Mr. Noguès specialized in armoured warfare and was an early proponent of landship utilization, spearheading France's first Armoured Corp at the battle of Verdun; the results were simply to good to ignore. Even when the Treaty of Tours was signed secret efforts were being made to reverse engineer captured mechs, although the technology had be used against its creators general production knowledge was still unknown. "
 
-  PB_Claire_Chennault_DESC:0 ""
+  PB_Claire_Chennault_DESC:0 "§YBorn:§! 6/9/1893\n\n§YClaire Chennault§!, nicknamed Old Leatherface, is an Franco-American by birth. Originating from Louisana he took an early interest in politics, subsequently joining the Commonwealth army at the age of 18. Being far too young to apply for Operation Overlord during the Great War he instead watched from the sidelines as brothers and fathers quickly applied for the so-called 'war to end all wars'.\n\nHe finally saw reputable service in Wallonia where he was stationed on the border with France, belonging to a joint Anglo-American expeditionary force. Around the late 20s the economic situation of Wallonia was looking quite depressing and with Britain refusing troops passage back to America because of the situation with France many Americans defected across the border. Only to be welcomed by an authoritarian government in need of experienced and disciplined soliders. In fact thousands of American defectors quickly found positions in law enforcement because of their non-French identity, the state believed that these foreigners would be more harsh then the typical French man and would lack any restraint in their duties."
 
   PB_Maxime_Weygand_DESC:0 ""
 
@@ -55,6 +59,8 @@
   PB_Georges_Catroux_Desc:0 ""
 
   PB_Alphonse_Juin_Desc:0 ""
+
+  # Admirals
 
   PB_Gabriel_Auphan_Desc:0 ""
 
@@ -690,6 +696,38 @@
   French_flavour.22.d:0 "“Times have been tough”. As Joseph lit another cigarette, Eugene looked worried out of the window on the busy Paris street. “Nobody likes a journalist, especially the government. That’s why we have to keep our head low and not risk our neck for the truth”. Joseph exhaled the smoke, making the already grim room a little bit more gray.\n\n“I didn’t become a journalist to write what people want to hear, Joseph, I became one to fuck up some corrupt folk and uncover some unpleasant truths”. Joseph laughed a bit before inhaling another cloud of smoke. A combination of laughing and coughing followed. “Well, why don’t you start with [FRA.GetLeader] and see how long your neck will be attached to the rest of that young body of yours”. It wasn’t a wonder that Joseph was as defeatist as he was, but it was quite a contrast to a few years ago, when he often pulled the rug under big politicians when democracy was still in place.\n\nBefore Eugene could answer Joseph's sarcastic remark, the sound of car doors closing came from outside. In a few seconds, soldiers were at the doors of the building. As Joseph opened the door, he was pushed to the side of his own business, blood flowing out of his nose. Before a bit of that old spirit in Joseph could demand an answer out of that brute called a soldier, a man in a coat entered. “Monsieur Joseph, I’ve come here to inform you of some important information for the future of your little paper. If we could speak in your office under four eyes, that would be greatly appreciated”.\n\nAfter a short 15 minutes, the man in the dark coat left the building with his soldiers. As the cars in front of the building drove away, Joseph also came out of his office, defeated and still with blood running down his lip. “The ministry of media relations has decided that we’ve released threatening articles that jeopardize state security. We’re now under new management”."
   French_flavour.22.a:0 "Lets Have A Read"
 
+  French_flavour.23.t:0 "A New Job In Paris"
+  French_flavour.23.d:0 ""
+  French_flavour.23.a:0 "Honest Work Pays Well"
+
+  French_flavour.24.t:0 "Steady As She Goes"
+  French_flavour.24.d:0 ""
+  French_flavour.24.a:0 "Life Is Wonderful"
+
+  French_flavour.25.t:0 "The Truncheon"
+  French_flavour.25.d:0 ""
+  French_flavour.25.a:0 "If Your Innocent Then You Have Nothing To Fear"
+
+  French_flavour.26.t:0 "A Womens Life"
+  French_flavour.26.d:0 ""
+  French_flavour.26.a:0 "Everyone Has Their Role"
+
+  French_flavour.27.t:0 "Bootcamp"
+  French_flavour.27.d:0 ""
+  French_flavour.27.a:0 "Why Did I Join The Military?"
+
+  French_flavour.28.t:0 "The Loyalty Test"
+  French_flavour.28.d:0 ""
+  French_flavour.28.a:0 "Did You Pass?"
+
+  French_flavour.29.t:0 "The Exam"
+  French_flavour.29.d:0 ""
+  French_flavour.29.a:0 "I Hate Tests"
+
+  French_flavour.30.t:0 "Another Batch"
+  French_flavour.30.d:0 ""
+  French_flavour.30.a:0 "Welcome To The Army"
+
   French_flavour.31.t:0 "The Italian Civil War"
   French_flavour.31.d:0 "Each cold breathe the minister gave between words only emphasized the unfortunate reality of the war. It was as if each breathe was a desperate please for assistance, directed to the garrison head near the upper savoy border for help, of any kind. The disciples of the ISRF would hang for crimes against the state if they were too loose the war and both the garrison head and minister knew this, though one was clearly on the short end of the stick. He didn't beg twice, his eyes did all the talking, and the message was very clear. The garrsion head lent back in his rickety chair and pondered for a moment."
   French_flavour.31.a:0 "Fine, Send Them More Guns"
@@ -1120,18 +1158,29 @@
   PB_FRA_Fuel_Synthesis:0 "Synthetic Fuels Development"
   PB_FRA_Fuel_Synthesis_desc:0 "High Command has raised concerns over France's rather lacking synthetic oil industry. It has been estimated, even with Russia's oil exports, that our military at best would be able to operate for a meagre two years; three years if we ration our reserves. This is simply unacceptable and alternate outcomes must be found if we are to survive another bloody conflict. Thankfully recent advancements in synthetic oil proccessing technology may be able to address some of those concerns."
   PB_FRA_Slave_Labour:0 "Labour Camps"
+  PB_FRA_Slave_Labour_desc:0 "France is abundant with degeneracy. It is about time we put these inferiors to work, our economy needs a continous supply of labour if it is to rival others and where better to gather said supply then our own backyard. Afterall we are giving these individuals something better than death, the oppurtunity to die for France. They shall spend their days toiling in France's industrial zones, here they will not beg, only work."
   PB_FRA_Caste_Economy:0 "An Economy of Castes"
+  PB_FRA_Caste_Economy_desc:0 "People must know there place in French society, workers, engineers, scientists and all will stay with their respected echelons. Those that are of no use will still be put to work, 'industrial grunts' that will provide the nation with a cheap and ready supply of labour. "
   PB_FRA_Military_Industry2:0 "Expand Military Industries"
+  PB_FRA_Military_Industry2_desc:0 "Our military requests rifle after rifle, if we are to meet these demands then we must expand our industrial capabilities. New military complexes dedicated to the production of war materials will be opened."
   PB_FRA_Enslave_Political_Prisoners:0 "Redeem the Political Prisoners"
+  PB_FRA_Enslave_Political_Prisoners_desc:0 "If 'anti-citizens' wish to re-enter French society then they must prove themselves worthy for such greateness. The establishment of Trust Camps will ensure anyone responsible for wrongdoings will learn and re-enter society with a more preferable mindset."
   PB_FRA_Enslave_Only_Racial:0 "Maintain the Racial Bias"
+  PB_FRA_Enslave_Only_Racial_desc:0 "We should place a heavy emphasis on ridding France of foreign blood, thousands of Germans and Jews still populate the eastern states of France and we could do without them. Transforming the camps into racial ghettos will accelerate the erradication processes of all inferiors."
   PB_FRA_Peculiar_Institutions:0 "Peculiar Institutions"
+  PB_FRA_Peculiar_Institutions_desc:0 "Some may argue that slavery is immorale, even those that advocate for the erradication of inferiors show a certain disgust to the idea, the issue isn't the process though. Only its implementation."
   PB_FRA_Military_Industry3:0 "Mass Military Expansion"
+  PB_FRA_Military_Industry3_desc:0 "The lists of requests only keep increasing. Everyday new resources are needed to fuel the machines that keep our war economy running, that and the machines themselves require expansion. New factories will be provided by the state, this time on a scale that should keep the military sustained for months to come."
   PB_FRA_German_Labour_Imports:0 "Import German Labour"
+  PB_FRA_German_Labour_Imports_desc:0 "The newly formed regime of Nuremburg Germany is eager to assist France in its struggle against Britain. Donations in the form of manpower, resources, and war materials will be sent our way via a list of requests to the new German state. "
   PB_FRA_German_Industry:0 "Migrate Rhenish Industries"
+  PB_FRA_German_Industry_desc:0 "As stipulated in our treaty, Germany is to provide France with necessary materials as it requests. While the initial industrial demands were rather 'fair' as the war continues and changes so does the situation. The economic thirst for more factories is too great for France to sustain by itself and it must acquire new industries to address such issues.  "
   PB_FRA_Chattel_Slavery:0 "German Servitude"
+  PB_FRA_Chattel_Slavery_desc:0 "The Germans must know their place. They are not out partners, nor equals, they are our servants. They shall be reminded of this fact else dissent may occur, forceful persuasion may be required."
   PB_FRA_Heavy_Water_Research:0 "Heavy Water Development"
+  PB_FRA_Heavy_Water_Research_desc:0 "French scientists have pondered on the idea of the Atom. While the science is rather young and theoretical if we fund such areas we may be able to harness unmatched technologies."
   PB_FRA_Fund_The_Steelworks:0 "Fund The Steelworks"
-  PB_FRA_Fund_The_Steelworks_desc:0 ""
+  PB_FRA_Fund_The_Steelworks_desc:0 "With the need for steel reaching new highs we must address these requests with further expansions into the heavy industry area. Entire complexes dedicated towards the production of these refined materials will be newly opened."
   PB_FRA_Rhineland_Integration:0 "Integration of the Rhineland"
   PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
   PB_FRA_Rearmament_Campaigns:0 "Rearmament Campaigns"
@@ -1142,6 +1191,7 @@
   PB_FRA_State_Owned_Weapon_Manufacturers:0 "State Owned Weapon Manufacturers"
   PB_FRA_An_Industry_That_Never_Sleeps:0 "An Industry That Never Sleeps"
   PB_FRA_Dig_Sites:0 "Dig Sites"
+  PB_FRA_Dig_Sites_desc:0 "The demand for materials is never-ending. Our furnaces thirst for iron ore and while we already have an abundant access to such resources one can never have too much of anything. We shall open new dig sites in the name of industry."
   PB_FRA_Pride_In_Our_Work:0 "Pride In Our Work"
   PB_FRA_Road_Works:0 "Road Works"
   PB_FRA_Electrification_Processes:0 "Electrification Processes"
