Deutsche Bratwurst Oh ja sehr lecker
- German RC Ministers
- Goals
- Events
- Locals
- Focus Stuff

--- a/localisation/PB_Germany_l_english.yml
+++ b/localisation/PB_Germany_l_english.yml
@@ -4,7 +4,6 @@
   # MINISTERS
   ##########################
   GER_PB_Ernst_Starhemberg:0 "Ernst Rüdiger Starhemberg"
-  GER_PB_Alfred_Hugenberg:0 "Alfred Hugenberg"
   GER_PB_Wilhelm_Keitel:0 "Wilhelm Keitel"
   GER_PB_Heinrich_Himmler:0 "Heinrich Himmler"
   GER_PB_Anton_Dressler:0 "Anton Dressler"
@@ -19,19 +18,23 @@
   GER_PB_Johann_Koplenig:0 "Johann Koplenig"
   GER_PB_Adolf_Brand:0 "Adolf Brand"
   GER_PB_Erich_Muhsam:0 "Erich Mühsam"
+  GER_PB_Moeller_Bruck:0 "Arthur Moeller van den Bruck"
 
   GER_PB_Karl_Liebknecht:0 "Karl Liebknecht"
   GER_PB_Rudolf_Hilferding:0 "Rudolf Hilferding"
   GER_PB_Julius_Curtis:0 "Julius Curtis"
+  GER_PB_Alfred_Hugenberg:0 "Alfred Hugenberg"
 
 
   GER_PB_Hermann_Muller:0 "Hermann Müller"
   GER_PB_Joseph_Goebbels:0 "Paul Joseph Goebbels"
   GER_PB_Willy_Hellpach:0 "Willy Hellpach"
+  GER_PB_Konstantin_Neurath:0 "Konstantin von Neurath"
 
   GER_PB_Otto_Wels:0 "Otto Wels"
   GER_PB_Wilhelm_Kulz:0 "Wilhelm Külz"
   GER_PB_Wilhelm_Groener:0 "Wilhelm Groener"
+  GER_PB_Franz_Guertner:0 "Franz Gürtner"
 
 
   ##########################
@@ -478,8 +481,8 @@
   germany.3.a:0 "...Oh."
 
   germany.4.t:0 "Kaiser Rudolf Abdicates the Throne"
-  germany.4.d:0 ""
-  germany.4.a:0 "Archduchess Elisabeth Marie will succeed him."
+  germany.4.d:0 "When the news reached the people, most did not know to respond.\n Confused? Sad? "Fearful of the Future?\n\nWhen was the last time a Kaiser Abdicated? Did it ever happen? Now people were remembering one important detail surrounding all of this. The Kaiser had only one heir, his daughter Elisabeth Marie.\n\nA woman. After 250 Years a woman would again come to bear the title of Kaiser. However everyone knew she would not become the next Maria Theresa. While personal friends often give her the nickname of 'Erzsi', the public and especially her greatest doubters call her the'Red Princess'. Elizabeth has made some years ago pubibly that she believes in the values of socialism, peace and unity. Despite being forbidden to join a party, she has several contacts and friends in the labour party and she herself organized food banks for poor people during this depression.\n\nDespite protests of several politicians, Rudolf insisted that she would suceed him as Kaiserin. And so when all Germans were able to see the coronation of their new Kaiserin on television, it is not unfounded to say that they had the same thoughts in those moments.\n\n What will happen now?"
+  germany.4.a:0 "A New Era for our Nation Begins"
 
   germany.5.t:0 "Prince Georg claims the German Throne"
   germany.5.d:0 ""
@@ -703,8 +706,8 @@
   germany.53.d:0 ""
   germany.53.a:0 "For a Free and United Europe."
   
-  germany.54.t:0 "The Government Collapses"
-  germany.54.d:0 ""
+  germany.54.t:0 "The Stresemann Resigns - The Government Falls"
+  germany.54.d:0 "Gustav Stresemann has given the new Kaiserin his appeal to resign from his duties as chancellor. With political terrorism rising, the economic depression still ongoing and all the drama around the Kaiserin, Gustav has determined that he is not the right man for the job anymore. With Stresemann resignation it is clear that the other liberal minister would leave aswell and the coalition between SB and UDP would be no more.\n\nDespite this Elizabeth has decided to accept Stresemann's resignation. While more political turmoil and elections are not the things the nation need right now, the Kaiserin thinks Germany needs a new government to change the rusty gears it has been running on for so long now.\n\nFranz Blücher will temporarily take over the Chancellory and Liebknecht, Müller and Külz have agreed to maintain their ministries positions until the next government has been voted into power."
   germany.54.a:0 "It's all collapsing now."
 
   germany.55.t:0 "Elections Scheduled"
@@ -947,6 +950,10 @@
   semi_autonomous_state:0 "Autonomous State"
   french_terrorism:0 "The Alsace National Union Party"
   french_terrorism_2:0 "The Alsace National Union Party"
+
+  PB_GER_RED_POLITICS:0 "§RSozialistischer Bund§! has won the 1933 Elections"
+  PB_GER_YELLOW_POLITICS:0 "§YUnabhängige Demokratische Partei§! has won the 1933 Elections"
+  PB_GER_BROWN_POLITICS:0 "§LDeutscher Volksbund§! has won the 1933 Elections"
   
   PB_GER_TT_Centralization:0 "§YThe effects of Unrest in the Volksstaten will be §! §Greduced.§! "
   GER_PB_Tooltip_Costs:0 "The Decision Cost, to reduce Unrest in the Volksstaaten, will be §Greduced and made all the same.§!"
