Interface Work and French Loc

--- a/localisation/PB_France_l_english.yml
+++ b/localisation/PB_France_l_english.yml
@@ -77,7 +77,8 @@
   ##########################
 
   PB_FRA_Purge_tt:0 "\nIt is time to end this political charade once and for all. Let the disobedient rot, they had no place in Doriot's new France anyway."
-  PB_FRA_Attack_Germany_tt:0 "\nThe war will be automatically triggered if this focus hasn't been completed before §PSeptember 1937§!"
+  PB_FRA_Attack_Germany_tt:0 "A series of events will fire, eventually leading to war with the §P[GER.GetName]§!"
+  PB_FRA_Dutch_Crisis_tt:0 "Germany is likely to defend the §P[HOL.GetName]§! against any demands we make, this may lead to war"
 
   ##########################
   # Factionalism/Nationalistic Fervour
@@ -599,6 +600,22 @@
   French.89.d:0 ""
   French.89.a:0 "The Continental System Only Benefited France"
 
+  French.90.t:0 "Movement On The French Border"
+  French.90.d:0 ""
+  French.90.a:0 "What Are They Up To?"
+
+  French.91.t:0 "Send The Demands"
+  French.91.d:0 ""
+  French.91.a:0 "Its Alsace Or Blood"
+
+  French.92.t:0 "France Demands Alsace"
+  French.92.d:0 ""
+  French.92.a:0 "Over My Cold Dead Hands"
+
+  French.93.t:0 "Germany Refuses"
+  French.93.d:0 ""
+  French.93.a:0 "They Had Their Chance"
+
   French.1000.t:0 "French Diplomatic Outreach"
   French.1000.d:0 "The French are approaching us for an alliance"
   French.1000.a:0 "We agree"
@@ -624,13 +641,13 @@
   French_flavour.4.d:0 ""
   French_flavour.4.a:0 "Our Struggle Will last A Thousand Years More"
 
-  French_flavour.5.t:0 ""
+  French_flavour.5.t:0 "Strange Noises"
   French_flavour.5.d:0 ""
-  French_flavour.5.a:0 ""
+  French_flavour.5.a:0 "What Could It Be?"
 
-  French_flavour.6.t:0 ""
+  French_flavour.6.t:0 "Life In Lyon"
   French_flavour.6.d:0 ""
-  French_flavour.6.a:0 ""
+  French_flavour.6.a:0 "What A Wonderful World"
 
   French_flavour.7.t:0 "A New Home for the Degenerate"
   French_flavour.7.d:0 "Before he could realize it, Antoine was forcefully picked up again by the same soldiers that had pulled him onto the military truck that faithfull night. With his knees painfully scraping over the dirty, cold ground, Antoine received a hard fist to his jaw. “Your feet still work pig, don’t try and be petty”, the soldier holding his left arm shouted.\n\nWith the cold dawn setting in, Antoine reached the large facility on the outskirt of some random forest in the French countryside. The sounds of toiling men and women were drowned out by the sounds of iron doors and the wooden stocks of guns hitting flesh. Before he could properly take in the atmosphere, Antoine was thrown into what looked like a temporary holding cell. The door behind him shut and he was left in the dark, yet he still wasn’t alone. One other soul was also in this dark room, his or her eyes glowing with the small bit of light that came into this room through the small window. “Are you alright”, he or she asked. A soft hand touched Antoine’s elbow, feeling the bit of skin that was scraped off him by the fall into his new home. “I would have helped you, but there’s not even some linen I could use to patch you up”. It was nice that at least some people haven’t lost their humanity in these trying times, Antoine thought.\n\nBefore he could reply, the light from the window dimmed as a man stood behind it. “Rest while you still can, tomorrow is your first day of labour”."
@@ -1182,9 +1199,13 @@
   PB_FRA_Fund_The_Steelworks:0 "Fund The Steelworks"
   PB_FRA_Fund_The_Steelworks_desc:0 "With the need for steel reaching new highs we must address these requests with further expansions into the heavy industry area. Entire complexes dedicated towards the production of these refined materials will be newly opened."
   PB_FRA_Rhineland_Integration:0 "Integration of the Rhineland"
+  PB_FRA_Rhineland_Integration_desc:0 "With the Rhineland now under full control of the French state efforts must be made to integrate these newly conquered territories into greater France. New settlements will be raised in the major Rhenish industrial city of Cologne. We will frenchify the Rhineland and welcome her as one of France's core territories. "
   PB_FRA_MGE_Subservient_Partner:0 "What's Theirs is Ours"
+  PB_FRA_MGE_Subservient_Partner_desc:0 "Germany is rich in resources, thousands of mines lay underutilized by untrained workers. We shall fill these holes in the Earth with new life, a life only France could provide. Of course Germany is expected to pay the toll, whilst we reap the rewards."
   PB_FRA_Rearmament_Campaigns:0 "Rearmament Campaigns"
+  PB_FRA_Rearmament_Campaigns_desc:0 "The new hegemony of Europe will require a strong and able army to enforce her demands. New factories, technologies, and economical theories must be implemented if France is truly going to be the new master of Europe.\n\nFrom Paris, to London, to Frankfurt, all will see her grand beauty, and all will fear her unrivaled might."
   PB_FRA_Underground_Factories:0 "Underground Factories"
+  PB_FRA_Underground_Factories_desc:0 "We must account for the fact that rival powers may surpass France in the battle for the heavens. If so then our industry will become vunerable to aerial bombardment. Constructing underground factories will address half the issue, the other half being how do we retake the skies."
   PB_FRA_Promissory_Notes:0 "Promissory Notes"
   PB_FRA_Blood_Sweat_And_Patriotism:0 "Blood Sweat And Patriotism"
   PB_FRA_Military_Contracts:0 "Military Contracts"
