--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -332,7 +332,7 @@
   PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible."  
   PBNews.86.a:0 "Like Fighting The Ocean With A Bucket"
 
-  PBNews.87.t:0 "FRANCE DECLARES WAR ON GERMANY"
+  PBNews.87.t:0 "EUROPE AT WAR"
   PBNews.87.d:0 "War has broken out in Europe, as the French military has launched a full-scale invasion of Germany. The government officially declared war just minutes after the first military engagement, claiming that the United Kingdoms of Germany were poised to invade and that the invasion was little more than a preemptive strike. The German government has denounced these claims, vowing to fight to the last man against the French. Some foreign analysts believe that this conflict will soon spiral across the whole continent, but only time will tell if this is the case."  
   PBNews.87.a:0 "The fires of war burn once more"
 
